move stroke-dash and other stroke related property to html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		<div class="cds-loading">
 		<!-- Loading spinner -->
 		<svg class="cds-loading-spinner" viewBox="0 0 96 96">
-			<circle cx="48" cy="48" r="44" stroke="#79b700" ></circle>
+			<circle cx="48" cy="48" r="44" 	 stroke="#79b700" stroke-dasharray= "270"
+				 stroke-dashoffset="0"></circle>
 		</svg>
 		<!-- Loading message -->
 		<span class="cds-loading-primary-message">Loading Dynamic Input</span>
