--- a/index.html
+++ b/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="src/styles.css">
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-	<link rel="stylesheet" type="text/css" href="src/styles.css">
-</head>
+  <body>
+    <!-- Loading overlay to cover the entire viewport -->
 
-<body>
-<!-- Loading overlay to cover the entire viewport -->
+    <p>
+      screen content to be covered.
+    </p>
 
-<p>
-	screen content to be covered.
-</p>
+    <div class="cds-overlay">
+      <div class="cds-loading">
+        <!-- Loading spinner -->
+        <div class="cds-loading-spinner"></div>
+        <!-- Loading message -->
+        <span class="cds-loading-primary-message">Loading Dynamic Input</span>
+        <span class="cds-loading-secondary-message"
+          >Wait a moment while we retrieve your dynamic input.</span
+        >
+      </div>
+    </div>
 
-<div class="cds-overlay">
-
-		<div class="cds-loading">
-		<!-- Loading spinner -->
-		<svg class="cds-loading-spinner" viewBox="0 0 96 96">
-			<circle cx="48" cy="48" r="44"></circle>
-		</svg>
-		<!-- Loading message -->
-		<span class="cds-loading-primary-message">Loading Dynamic Input</span>
-		<span class="cds-loading-secondary-message">Wait a moment while we retrieve your dynamic input.<span>
-	</div>
-</div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+    <script src="src/index.js"></script>
+  </body>
 </html>
